--- a/src/styles.css
+++ b/src/styles.css
@@ -21,3 +21,7 @@ body {
 .container h1 {
   font-weight: bold;
 }
+
+.heading {
+  text-align: center;
+}
